fix(souls): Add missing margin to photos__title 🐛

--- a/souls/sass/style.sass
+++ b/souls/sass/style.sass
@@ -166,6 +166,8 @@
     max-width: 370px
 
   &__title
+    margin-bottom: 19px
+
     font-size: 85px
     line-height: $title-lh-2
 
